# cdrama_recommender

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-05-06-fastapi-backend.md  2026-05-09-cli-and-postgres.md
docs/superpowers/specs/: 2026-05-06-fastapi-backend-design.md  2026-05-09-cli-and-postgres-design.md
notebooks/: 01_explore.ipynb  02_cleaning.ipynb  03_embeddings.ipynb  04a_parser_lab.ipynb  04b_generator_lab.ipynb
scripts/: collect_candidates.py
src/: env.py
src/api/: main.py  routes.py  schemas.py
src/database/: connection.py  functions.sql  loader.py  schema.sql
src/recommender/: _shared.py  models.py  pipeline.py  search_reference.py  search_semantic.py  search_sql.py
src/scraper/: _http.py  drama_info.py  drama_urls.py  run_scrape.py
src/scrapper/: _http.py
tests/calibration/: test_weight_calibration.py
tests/data_quality/: conftest.py  test_data_quality.py
tests/data_quality/checks/genres_and_tags/: genres_not_empty.sql  tags_not_empty.sql
tests/data_quality/checks/schema/: mdl_id_unique.sql  null_required_columns.sql  year_in_range.sql
tests/evals/: conftest.py  llm_judge.py  test_parse_user_query.py  test_weight_calibration.py
tests/evals/fixtures/: candidate_sets.json
tests/fixtures/: parser_cases.py
tests/integration/: conftest.py  test_exclude_genres.py  test_parse_user_query.py
tests/parser/: conftest.py  test_parse_user_query.py
tests/retrieval/: conftest.py  test_exclude_genres.py
tests/smoke/: test_api_smoke.py  test_postgres_connection.py  test_supabase_connection.py
tests/unit/: test_build_context.py  test_format_parsed_filters.py  test_format_results.py  test_generate_stream.py  test_rerank.py  test_score.py
tests/unit/api/: test_routes.py  test_schemas.py
