[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "cdrama-recommender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "matplotlib>=3.10.8",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pgvector>=0.3",
    "psycopg[binary]>=3.2",
    "pyarrow>=23.0.1",
    "pytest>=9.0.3",
    "requests>=2.33.1",
]

[tool.pytest.ini_options]
markers = [
    "db: tests that hit local Postgres (deselect with -m 'not db')",
    "parser: tests that call the OpenAI API via parse_user_query (deselect with -m 'not parser')",
]
